todo-app/todo-frontend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  todo-app
  namespace: project
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: todo-volume
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
      - name: todo-app
        image: PROJECT/TODO-APP
        imagePullPolicy: Always
        volumeMounts:
            - name: todo-volume
              mountPath: /usr/src/app/files
        resources:
          requests:
            cpu: "10m"
            memory: "32Mi"
          limits:
            cpu: "100m"
            memory: "64Mi"
